<resources>
    <string name="app_name">MADFinalAPP</string>
    <string name="et1">Enter number 1</string>
    <string name="et2">Enter number 2</string>

    <string name="Add">Addition</string>
    <string name="Subtract">Subtraction</string>
    <string name="divide">Division</string>
    <string name="multiply">Multiply</string>
    <string-array name="countries">

        <item>England</item>
        <item>Netherlands</item>
        <item>Belgium</item>
        <item>Germany</item>
        <item>Finland</item>

    </string-array>
    <string-array name="names">
        <item>Select Food Category</item>
        <item>Indian Sweets</item>
        <item>Bakery</item>
        <item>Milk and Milk products</item>

    </string-array>

</resources>