<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:width="350dp"
        android:height="45dp"
        android:ems="10"
        android:hint="@string/et1"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:width="350dp"
        android:height="45dp"
        android:ems="10"
        android:hint="@string/et2"
        android:inputType="textPersonName"
        android:layout_below="@id/et1"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et2"
        android:width="150dp"
        android:layout_marginLeft="50dp"
        android:text="@string/Add" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et2"
        android:width="150dp"
        android:layout_marginLeft="210dp"
        android:text="@string/Subtract"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:width="150dp"
        android:layout_marginLeft="50dp"
        android:text="@string/multiply" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:width="150dp"
        android:layout_marginLeft="210dp"
        android:text="@string/divide"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button3"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/intentional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:width="150dp"
        android:text="Next page"/>

</RelativeLayout>